# testc

./: .clangd  CMakeLists.txt  hello.cpp  hello.hpp  main.cpp
